<resources>
    <string name="app_name">Gait Analyzer</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginTitle">Login</string>
    <string name="createPageButton">Create An Account</string>
    <string name="forgotPasswordButton">Forgot Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_pass">Entry Pass</string>
    <string name="menu_settings">Settings</string>
    <string name="namePlaceholder">name</string>
    <string name="imageDesc">Your Profile Picture!</string>
    <string name="icPlaceholder">IC</string>
    <string name="emailPlaceholder">email</string>
    <string name="autogenText">This certifies that</string>
    <string name="autogenText2">was vaccinated on</string>
    <string name="dateOfVaccinationText">Date of Vaccination:</string>
    <string name="datePlaceholder">date</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_profile_picture">Profile Picture</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="openDrawer" />
    <string name="closeDrawer" />
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="sign_in_button">Sign In</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="action_login">Login</string>
    <string name="action_full_name">Full Name</string>
    <string name="action_nric">NRIC</string>
    <string name="action_scanner">Scanner</string>
    <string name="name_ic_placeholder">name@ic</string>
    <string name="action_date">Select Date</string>
    <string name="action_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="info">Information</string>
    <string name="bigTextInfo">The Gait Analyzer is an Android Application made to monitor and analyse gait patterns in Parkinson’s Disease Patients. This was made in conjunction to SMP 2020, wherein an Arduino prototype was created. This application uses phone sensors to monitor these gait patterns and performs simplistic signal processing.</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="zoom">15f</string>
    <string name="self">My name is Prannaya Gupta. And I am from M21404.</string>
    <string name="contact">You can contact me at h1810124@nushigh.edu.sg.</string>
    <string name="profilePic">My Profile Picture</string>
</resources>