<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/information"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info"
        android:title="@string/info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_video"
        android:orderInCategory="100"
        android:title="About The Application"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_me"
        android:orderInCategory="100"
        android:title="About Me"
        app:showAsAction="never">
    </item>
</menu>