<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.about.AboutActivity"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="226dp"
            android:layout_height="226dp"
            android:background="@drawable/me"
            android:contentDescription="@string/profilePic" />

        <TextView android:text="@string/self"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:fontFamily="sans-serif-light"
            android:layout_margin="40dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            />

        <TextView android:text="@string/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:layout_margin="20dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>